# swagger.yml
@@ -285,10 +285,10 @@ paths:
         200:
           description: "The Visits data was successfully retrieved."
           schema:
-            description: "The visit data for the given shortened URL."
-            type: "array"
-            items:
-              $ref: "#/definitions/Visit"
+            additionalProperties:
+              type: "array"
+              items:
+                $ref: "#/definitions/Visit"
         default:
           description: "Unexpected error."
           schema:
